2008-04-20  Ville Vainio <vivainio@gmail.com>

	* Extensions/ipy_lookfor.py: add %lookfor magic command
	(search docstrings for words) by Pauli Virtanen. Close #245.

2008-04-18  Fernando Perez  <Fernando.Perez@berkeley.edu>

	* IPython/genutils.py (page): apply workaround to curses bug that
	can leave terminal corrupted after a call to initscr().

2008-04-15  Ville Vainio <vivainio@gmail.com>

	* genutils.py: SList.grep supports 'field' argument

	* ipy_completers.py: module completer looks inside
	.egg zip files (patch by mc). Close #196.

2008-04-09  Ville Vainio <vivainio@gmail.com>

	* deep_reload.py: do not crash on from __future__ import 
	absolute_import. Close #244.

2008-04-02  Ville Vainio <vivainio@gmail.com>

	* ipy_winpdb.py: New extension for winpdb integration.  %wdb
	test.py is winpdb equivalent of %run -d test.py.  winpdb is a
	crossplatform remote GUI debugger based on wxpython.

2008-03-29  Ville Vainio <vivainio@gmail.com>

	* ipython.rst, do_sphinx.py: New documentation base, based on
	reStucturedText and Sphinx (html/pdf generation).  The old Lyx
	based documentation will not be updated anymore.

	* jobctrl.py: Use shell in Popen for 'start' command (in windows).

2008-03-24  Ville Vainio <vivainio@gmail.com>

	* ipython.rst, do_sphinx.py: New documentation base, based on
	reStucturedText and Sphinx (html/pdf generation).  The old Lyx
	based documentation will not be updated anymore.

	ipython.rst has up to date documentation on matters that were not
	documented at all, and it also removes various
	misdocumented/deprecated features.
	
2008-03-22  Ville Vainio <vivainio@gmail.com>

	* Shell.py: Merge mtexp branch:
	https://code.launchpad.net/~ipython/ipython/mtexp

	Privides simpler and more robust MTInteractiveShell that won't
	deadlock, even when the worker thread (GUI) stops doing runcode()
	regularly. r71.

2008-03-20  Ville Vainio <vivainio@gmail.com>

	* twshell.py: New shell that runs IPython code in Twisted reactor.